--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.23.0",
     "babel-runtime": "^6.25.0",
+    "bootstrap": "^4.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.28.4",
     "eslint": "^4.10.0",
@@ -31,6 +32,7 @@
     "html-webpack-plugin": "^2.28.0",
     "jasmine-core": "^2.7.0",
     "jasmine-spec-reporter": "^4.1.1",
+    "jquery": "^3.3.1",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
@@ -41,6 +43,7 @@
     "lodash": "^4.17.4",
     "ng-annotate-loader": "^0.6.1",
     "node-sass": "^4.5.0",
+    "popper.js": "^1.12.9",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.19.0",
