--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.10",
     "angular": "^1.5.0",
+    "angular-messages": "^1.6.9",
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
