--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@uirouter/angularjs": "^1.0.10",
     "angular": "^1.5.0",
     "angular-messages": "^1.6.9",
+    "ngstorage-webpack": "^2.2.2",
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
